Fix List visibility issue in Markdown (#2635)

--- a/xmlui/src/components/List/List.module.scss
+++ b/xmlui/src/components/List/List.module.scss
@@ -30,7 +30,6 @@ $backgroundColor-List2: createThemeVar("backgroundColor-#{$component}");
   }
 
   .innerListWrapper {
-    visibility: hidden;
     display: flex;
     flex-direction: column;
     min-height: 100%;
